--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@types/node": "^22.9.3",
     "@vitejs/plugin-vue": "^5.1.4",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
