--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,7 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "preserve",
+    "types": ["node"],
 
     /* Linting */
     "strict": true,
